fixed extra scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,6 +59,7 @@ video {
     display: inline-block;
     width: calc(100% - 200px);
     height: 100%;
+    overflow-y: hidden;
 }
 
 /* header */
@@ -104,7 +105,7 @@ input:focus, button {
 }
 
 .search-bar > input, button {
-    min-height: 55px;
+    min-height: 45px;
     border-radius: 12px;
     padding: 3px 12px;
 }
